Disply the output in the frontend

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
 
     <button onclick="callDocker('sin_cos.c')">sin_cos.c</button>
-
+    <div id="output"></div>
 
     <script src="main.js"></script>
 </body>
