Added the success/fail indication in the UI

--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         <div class="output-tab">Output</div>
         <!-- <div class="output-tab">Graph</div> -->
       </div>
-      <div id="graphDiv"></div>
+      <div class="allFlex">
+        <div id="graphDiv"></div>
+        <div id="verfResult" >
+        </div>
+      </div>
+      
       <div id="output"></div>
     </section>
   </div>
