--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -54,7 +56,7 @@
         <button class="primary-button" onclick="runHifrog('sin_cos.c')">Run HiFrog</button>
         <button class="danger-button" onclick="deleteSummary()">Delete Summaries</button>
         <button onclick="viewSummary()">View Summaries</button>
-        <button class="success-button" onclick="generateGraph()">Generate Graph</button>
+        <button class="success-button" onclick="downloadOutput()">Generate Graph</button>
       </div>
     </section>
     
