Changed 'Generate Graph' button to 'Download Output' button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button class="primary-button" onclick="runHifrog('sin_cos.c')">Run HiFrog</button>
         <button class="danger-button" onclick="deleteSummary()">Delete Summaries</button>
         <button onclick="viewSummary()">View Summaries</button>
-        <button class="success-button" onclick="downloadOutput()">Generate Graph</button>
+        <button class="success-button" onclick="downloadOutput()">Download Output</button>
       </div>
     </section>
     
